Controller Pro 1.0.16
=====================

New Features:

  - Manage User Credentials in Controller. (Juha Lindfors, ORCJAVA-422)
  - Convert Beehive remote proxy service to blocking I/O (Marcus Redeker, ORCJAVA-411)

Controller Pro 1.0.14
=====================

	Bug Fixes:

  - Fixed: Shell Execution Protocol does not destroy the spawned process (ORCJAVA-420)
  - Fixed: RRD4J URL Protocol generates incorrect URLs (ORCJAVA-441)

Controller Pro 1.0.13
=====================
	  
New Features:

  - Updated DSC Security System  to support EnvisaLink and improved current IT100 support
    (Greg Rapp, Phil Taylor, ORCJAVA-302)
  - Update logo to current version (ORCJAVA-429)
  - Update copyright date on home page (ORCJAVA-430)
  - Extend UDP listener to accept event values from a regexp group (ORCJAVA-392)

Controller 2.1.0 (2014-XX-XX Twin Galaxies)
===========================================

Bug Fixes:

  - Clean-up testApplicationContext.xml file (ORCJAVA-428)
  - Fixed : NPE while executing a gesture with a command linked to it (ORCJAVA-421)
  - Fixed: RRD4JServlet doesn't set the content-type heading to 'image/png' (ORCJAVA-423)
  - Patch drools for Java 7 support (ORCJAVA-258)

Controller Pro 1.0.12
=====================

Bug Fixes:

  - Update AMX implementation to use locale independent
    string case conversions (ORCJAVA-338)
  - Update Lutron implementation to use locale independent
    string case conversions (ORCJAVA-339)
  - Fixed Marantz protocol does not always re-connect to AVR (ORCJAVA-410)
  - Fix HTTPCommand to avoid Expect_Continue header for POST and PUT requests (ORCJAVA-415)
  - Fixed invalid XML generated for sensor values (ORCJAVA-416)
  - Fixed Marantz protocol takes a long time to connect to receiver (ORCJAVA-418)
  - Fix for timezone setting in date fields (ORCJAVA-401, Juha Lindfors)

Controller Pro 1.0.11
=====================

New Features:

  - Direct HTTP related logging into its own file in /logs/http/http.log